@@ -1,2 +1,5 @@
+Version
++ Removed Kwalitee tests
+
 Version 2009112301
 + First release
